--- a/gallery.css
+++ b/gallery.css
@@ -5,6 +5,15 @@ body{
 	margin: 0px;
 	overflow: hidden;
 }
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
 /*#homepage {
 	position: absolute;
 	z-index: 999;
@@ -25,6 +34,7 @@ body{
 	display: block;
 }
 #controls {
+	border-radius: 5%;
 	opacity: 0.5;
 	font-size: 50%;
 	position: absolute;
@@ -32,6 +42,11 @@ body{
 	z-index: 100;
 	top: 10px;
 	right: 10px;
+}
+.controlstext {
+	margin: 0px;
+	margin-bottom: 5px;
+	margin-right: 40%;
 }
 .button {
 	position: absolute;
